--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,10 +41,12 @@ background-color: #926239;
 color: #F4F4F4;
 }
 .bloc-content{
-  width: 30vw;
- display: bloc-content;
+  width: 33%;
+ display: inline-block;
+ box-sizing: border-box;
  padding: 10px;
- border:10px solid lime;
+ border: 1px solid #F4F4F4;
+ text-align: justify;
 
 
 }
