--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,24 +2,26 @@ body{
   margin: 0px;
   background-color: #F4F4F4;
   color: #926239;
+  font-family: Arial, Helvetica, sans-serif;
  }
 
 .welcome-section{
-  height: 100Vh;
+  height: 100vh;
 
   background-image: url(./../images/beachshowcase.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right bottom;
 
+  font-size: 20px;
   text-align: center;
   padding-top: 10%;
-
+}
   .welcome-section-heading{
-    
+    font-size: 50px;
      }
 
- }
+ 
 
 .welcome-section-link{
   padding: 10px;
@@ -27,11 +29,10 @@ body{
   border-radius: 10%;
   color: inherit;
    cursor: pointer;
-  ;
 }
 .solid-content{
    padding: 10px;
-  text-align: justify;
+     text-align: justify;
 
 }
 .dark-background{
@@ -43,12 +44,11 @@ background-color: #926239;
 color: #F4F4F4;
 }
 .bloc-content{
-  width: 33%;
- display: inline-block;
+  display: inline-block;
+ width: 33%;
  box-sizing: border-box;
- padding: 10px;
+ padding: 20px;
  border: 1px solid #F4F4F4;
+ vertical-align: top;
  text-align: justify;
-
-
 }
